--- a/.html
+++ b/.html
@@ -14,6 +14,9 @@
             padding: 15px;
             font-family: 'Courier New', Courier, monospace
          }
+        .display{
+            font-family: Arial, Helvetica, sans-serif;
+        }
          .heading{ 
             color: black;
             text-align: center;
